--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/todo
+# spring.datasource.url=jdbc:mysql://localhost:5432/todo
 
-spring.datasource.username=root
-spring.datasource.password=pa$$word
+# spring.datasource.username=root
+# spring.datasource.password=pa$$word
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-server.error.include-message=always
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# server.error.include-message=always
 
