--- a/pom.xml
+++ b/pom.xml
@@ -89,14 +89,14 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<!-- <plugin>
+			<plugin>
         <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <configuration>
+          <!-- <configuration>
             <source>1.17</source>
             <target>1.17</target>
-          </configuration>
-        </plugin> -->
+          </configuration> -->
+        </plugin>
 		</plugins>
 	</build>
 
